# signature

./: .gitignore  CMakeLists.txt  main.cpp  worker.cpp  worker.h
src/: CMakeLists.txt  iobserver.h  isubject.h  main.cpp  observer_test.cpp  stream_reader.h  subject.h  task_launcher.h  taskdeque.h  worker.cpp  worker.h
tests/: CMakeLists.txt  observer_mock.h  observer_test.cpp  stream_reader_test.cpp  task_deque_test.cpp  task_launcher_test.cpp  task_queu_test.cpp  worker_test.cpp
